# pwnpilot

./: .gitignore  .pwnpilot-activate.sh  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  INSTALLATION_IMPROVEMENTS.md  LLM_PENTESTING_RESEARCH_ANALYSIS.md  Makefile  POST_INSTALL_GUIDE.md  README.md  SYSTEM_WIDE_INSTALLATION.md  USABILITY_IMPROVEMENTS.md  alembic.ini  config.example.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  roe.juice-shop.yaml
.install/: dependency-manifest.env
demo/: README.md
demo/config/: demo_config.yaml  demo_roe.md
demo/guides/: DEMO_SETUP.md  TESTING_GUIDE.md
docs/: ARCHITECTURE.md  ATTACK_GENERATION_COMPARISON.md  BACKGROUND.md  CONFIGURATION_REFERENCE.md  CURRENT_SCHEMA.md  DB_OPERATIONS.md  DEPLOYMENT.md  ERROR_HANDLING.md  ERROR_HANDLING_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INDEX.md  INSTALLATION.md  LEGAL_HOLDS.md  NOVEL_ATTACK_GENERATION_ROADMAP.md  PAYLOAD_TELEMETRY.md  PLUGIN_DEVELOPMENT.md  README.md  roe-admin.md  roe-compliance.md  roe-usage.md
examples/: roe.external-pentest.yaml  roe.internal-test.yaml  roe.red-team.yaml  roe.template.yaml
pwnpilot/: __init__.py  cli.py  config.py  runtime.py
pwnpilot/agent/: action_envelope.py  action_validator.py  checkpointer.py  event_bus.py  executor.py  planner.py  repetition_detector.py  reporter.py  state.py  (+3 more)
scripts/: build-deb.sh  install.sh  install_security_tools.sh  pwnpilot.service  verify_toolchain.sh
tests/: conftest.py
(+168 files in other folders)
