[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwnpilot"
version = "0.1.0"
description = "Policy-first, multi-agent LLM-driven pentesting framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
    "litellm>=1.32",
    "cryptography>=42",
    "structlog>=24.1",
    "jinja2>=3.1",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-jsonschema",
    "pip-tools>=7.4",
]

[project.scripts]
pwnpilot = "pwnpilot.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pwnpilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pwnpilot --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
